draft-packages/divider/KaizenDraft/Divider/styles.module.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/border";

.wrapper {
  width: 100%;
  border: 0;
  margin: 0;
  border-radius: $kz-border-solid-border-radius;
}

.content {
  border-top: 1px solid rgba($kz-color-wisteria-700, 0.1);
  &.reversed {
    border-color: rgba($kz-color-white, 0.1);
  }
}

.canvas {
  border-top: 2px solid rgba($kz-color-wisteria-700, 0.2);
  border-bottom: 1px solid rgba($kz-color-wisteria-700, 0.2);
  &.reversed {
    border-color: rgba($kz-color-white, 0.1);
  }
}

